# Amr

./: README.md
Driver/PID/: dc1.txt
Driver/PWM_Gather/: PWM_Gather.ino
Driver/Uart_control/: Uart_control.ino
Driver_2/Debug_driver/: Debug_driver.ino
Driver_2/Keyboard_control_serial/: Keyboard_control_serial.ino
Driver_2/Master_control/: Master_control.ino
Driver_2/PID/: dc2.txt
Driver_2/PWM_Gather/: PWM_Gather.ino
Driver_2/Test_PWM/: PWM_Gather.ino  Test_PWM.ino
Driver_2/Uart_control/: Uart_control.ino
src/amr_bringup/: package.xml
src/amr_bringup/rviz/: gazebo.rviz
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/config/: robot_config.yaml  slam_real.yaml
src/amr_description/launch/: gazebo.launch.py  real_bringup.launch.py  slam_real.launch.py  view_robot.launch.py
src/amr_description/scripts/: bno055_node.py  wheel_rpm_odometry.py
src/amr_description/urdf/: amr.urdf.xacro  amr_gazebo.xacro  amr_geometry.xacro  amr_real.urdf.xacro  amr_real_sim.urdf.xacro  amr_real_v2.urdf.xacro
src/amr_mission_manager/: package.xml  setup.py
src/amr_mission_manager/amr_mission_manager/: web_mission_server.py
src/amr_mission_manager/amr_mission_manager/static/: style.css
src/amr_mission_manager/amr_mission_manager/templates/: index.html
src/amr_mission_manager/launch/: web_mission.launch.py
src/amr_mission_manager/resource/: amr_mission_manager
src/amr_navigation/: CMakeLists.txt  package.xml
src/amr_navigation/config/: ekf.yaml  ekf_real.yaml  map.pgm  map.yaml  nav2_explore_params.yaml  nav2_params.yaml
src/amr_navigation/launch/: auto_mapping.launch.py  auto_mapping_real.launch.py  nav2.launch.py  nav2_explore.launch.py
src/amr_navigation/scripts/: auto_mapper.py  manual_mapper.py  mission_control.py  nav2_explore.py  waypoint_saver.py
src/amr_simulation/: CMakeLists.txt  package.xml
src/amr_simulation/launch/: warehouse_with_robot.launch.py  warehouse_world.launch.py
src/amr_simulation/worlds/: warehouse.world
