<?xml version="1.0"?>
<package format="3">
  <name>amr_mission_manager</name>
  <version>0.1.0</version>
  <description>Local web-based mission manager for AMR waypoint control.</description>
  <maintainer email="hungubuntu@todo.todo">hungubuntu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>python3-flask</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
