<?xml version="1.0"?>
<package format="3">
  <name>amr_navigation</name>
  <version>0.0.0</version>
  <description>AMR navigation package with SLAM explore and post-map Nav2 task mode</description>

  <maintainer email="hungubuntu@todo.todo">hungubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>

  

  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>